--- a/_example-calendar/src/main/res/values/strings.xml
+++ b/_example-calendar/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="calendar_selection_type">Calendar Selection Type: </string>
+    <string name="max_selection_reached_message">Maximum quantity of %d has already been selected</string>
 </resources>
